--- a/index.html
+++ b/index.html
@@ -24,37 +24,38 @@
             </li>
         </ul>
     </div>
-   <div>
 
-   </div>
    <div class="ap1">
        <ul class="ap">
            <li><img class="perfil" src="image/IMG_20220309_152246_668.jpg" alt="" width="220px"></li>
            <li><h1>Gabriel Silva </h1></li>
            <li><p>Software Developer</p></li>
-           <li><div class="tecnolocias">
-            <p>Tecnologias</p> 
-               <div class="bartech">
+           <li><p>Tecnologias</p></li>
+       </ul>
+       <div class="centro">
+            <div class="tecnologia">
                 <i class="fa-brands fa-html5"></i>
                 <i class="fa-brands fa-css3-alt"></i>
                 <i class="fa-brands fa-js"></i>
                 <i class="fa-brands fa-vuejs"></i>
-               </div>
-           </div></li>
-       </ul>
+                </div>
+       </div>
    </div>
    <div class="projetos">
-        <ul>
-            <li><h1>Projetos</h1></li>
-            <li class="p1">
-                <h2>Cythara</h2>
-                <div class="animacao">
-                    <img class="cythara1" src="image/cythara.png" alt="" >
-                </div>
+            <h1>Projetos</h1>
+            <div><h2>Cythara</h2></div>
                 
-            </li>
-        </ul>
+            <div class="estante">
+                <div class="carrossel">
+                    <img class="itens" src="image/img1.jpg" alt="" width="500px">
+                    <img class="itens" src="image/img2.jpg" alt="" width="500px">
+                    <img class="itens" src="image/img3.jpg" alt="" width="500px">
+                    <img class="itens" src="image/img4.jpg" alt="" width="500px">
+                    <img class="itens" src="image/img5.jpg" alt="" width="500px">
+                    <img class="itens" src="image/img6.jpg" alt="" width="500px">
+                </div>
+            </div>
    </div>
-
+    
 </body>
 </html>
